1.0.0 (trunk):
* Changes marked with ! are type changes (not including field additions)
* ! Monad.bind now accepts a function first and then a Monad.t
* ! API.{get,post,delete,patch,put} now take optional fail_handlers
* ! API.{get,post,delete,patch,put} now take optional rate classification
* ! Scope.scope_of_string was renamed Scope.of_string
* ! Scope.string_of_scope was renamed Scope.to_string
* ! Scope.scopes_of_string was renamed Scope.list_of_string
* ! Scope.list_of_string returns a scope list option for unparseable scopes
* ! Scope.string_of_scopes was renamed Scope.list_to_string
* ! Token.{create,get_all,get,delete} now return _ authorization Monad.t
* ! Token.{create,get_all,get,delete} now have additional ?otp:string argument
* ! Token.create now has additional ?fingerprint:string argument
* ! Token.get now returns auth option authorization Monad.t
* ! User.current_info ~token argument was made optional ?token
* ! User.info ~login argument was renamed to ~user
* ! User.repositories now accepts optional ?token and does not accept ?page
* ! Pull.for_repo does not accept ?page and now returns pull Stream.t
* ! Pull.list_commits now returns commit Stream.t
* ! Pull.list_files now returns file Stream.t
* ! Milestone.for_repo does not accept ?page
* ! Milestone.for_repo now returns milestone Stream.t
* ! Release.for_repo now returns release Stream.t
* ! Issue.for_repo does not accept ?page and now returns issue Stream.t
* ! Issue.comments now returns issue_comment Stream.t
* ! Hook.for_repo now returns hook Stream.t
* ! Repo.tags now returns repo_tag Stream.t
* ! Repo.branches now returns repo_branch Stream.t
* ! Repo.refs now returns git_ref Stream.t
* ! Tag.get_tags_and_times was renamed Repo.get_tags_and_times
* ! Repo.get_tags_and_times now returns (string * string) Stream.t
* ! Tag.tag was renamed Repo.get_tag
* ! Gist.list_users was renamed Gist.for_user and now returns gist Stream.t
* ! Gist.list was renamed Gist.all and now returns gist Stream.t